--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
         </p>
       </section>
     </main>
+    <footer id="footer__main">
+      <p class="footer__copyright">
+        &copy; Copyright by
+        <a
+          class="footer__link twitter-link"
+          target="_blank"
+          href="https://www.linkedin.com/in/sheharyaar-furqan/"
+          >Sheharyaar Furqan</a>
+      </p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
